@@ -18,6 +18,10 @@
 
  - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
                       attached to generated JSON mail representation
+                      
+* 2014-07-31 - thorben.betten@open-xchange.com
+
+ - Fix for bug 33839: Escape site information when generating the publication site from selected template
 
 * 2014-07-29 - tobias.friedrich@open-xchange.com
 
